--- a/TGB.TelegramAPI/TGB.TelegramAPI.csproj
+++ b/TGB.TelegramAPI/TGB.TelegramAPI.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Telegram.Bot" Version="14.10.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Views\Home\" />
+  </ItemGroup>
+
 </Project>
