Modified TripsController and related views to add places to the trip

--- a/TouristGreenbook/TGB.WebAPI/TGB.WebAPI.csproj
+++ b/TouristGreenbook/TGB.WebAPI/TGB.WebAPI.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Views\Trips\CreateFinal.cshtml">
+    <Content Update="Views\Trips\SelectPlaces_.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
   </ItemGroup>
